testservice/templates/testservice-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: testservice-service
spec:
  selector:
    app: testservice
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 80
  type: LoadBalancer
